After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710520 - gst-rtsp-server: Improve unit tests (and fix bugs) for rtsp token
gst-rtsp-server: Improve unit tests (and fix bugs) for rtsp token
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other All
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-19 17:39 UTC by Sebastian Rasmussen
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch for fixing the bugs when creating empty token. (1.62 KB, patch)
2013-10-19 17:39 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch for validating the arguments for gst_rtsp_token_is_allowed. (838 bytes, patch)
2013-10-19 17:39 UTC, Sebastian Rasmussen
committed Details | Review
Proposed patch for adding unit tests for RTSP token. (4.77 KB, patch)
2013-10-19 17:40 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2013-10-19 17:39:12 UTC
Created attachment 257725 [details] [review]
Proposed patch for fixing the bugs when creating empty token.

Add new unit tests for RTSP token. Also fix the bugs concerning gst_rtsp_token_new_empty() before adding the unit tests that trigger the bug so that each commit of gst-rtsp-server builds successfully.
Comment 1 Sebastian Rasmussen 2013-10-19 17:39:46 UTC
Created attachment 257726 [details] [review]
Proposed patch for validating the arguments for gst_rtsp_token_is_allowed.
Comment 2 Sebastian Rasmussen 2013-10-19 17:40:13 UTC
Created attachment 257727 [details] [review]
Proposed patch for adding unit tests for RTSP token.
Comment 3 Wim Taymans 2013-11-12 09:45:24 UTC
commit 0e1665b7c6c886dab801f1a319015b99aa3d043a
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Oct 19 19:25:27 2013 +0200

    tests: Add unit tests for token
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=710520

commit e4509ed92cd38ea253a64113e0ea6f1a0907f085
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Oct 19 19:24:34 2013 +0200

    token: Validate args for gst_rtsp_token_is_allowed
    
    See https://bugzilla.gnome.org/show_bug.cgi?id=710520

commit c9025a58e106355a3143cad26b4e1352b6acf0c3
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Sat Oct 19 19:21:53 2013 +0200

    token: Fix bug when creating empty token
    
    We always want to have a valid GstStructure in the token.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=710520